删除错误文件

--- a/VirtualPathCore/VirtualPathCore.csproj
+++ b/VirtualPathCore/VirtualPathCore.csproj
@@ -12,6 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Graphics\OpenGL\5133vtfc.0ux~" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.2.3" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.3" />
     <PackageReference Include="Avalonia.Fonts.Inter" Version="11.2.3" />
